classDiagram
    class Ticket {
        +customer: ForeignKey~Customer~
        +created_by: ForeignKey~User~
        +created_at: DateTimeField
        +status: CharField
        +priority: CharField
        +estimated_cost: DecimalField
        +actual_cost: DecimalField
        +deposit_paid: DecimalField
        +deadline: DateField
        +completed_at: DateTimeField
        +assigned_technician: ForeignKey~User~
        +customer_notes: TextField
        +internal_notes: TextField
        +get_status_display()
        +get_priority_display()
    }
    Ticket "1" --> "1" Customer
    Ticket "1" --> "1" User: created_by
    Ticket "1" --> "0..1" User: assigned_technician